# cmd/server/docs/swagger.yaml
@@ -1,4 +1,20 @@
 definitions:
+  subscription.SubscribeReqBody:
+    properties:
+      city:
+        type: string
+      email:
+        type: string
+      frequency:
+        enum:
+        - hourly
+        - daily
+        type: string
+    required:
+    - city
+    - email
+    - frequency
+    type: object
   weather.Weather:
     properties:
       description:
@@ -15,6 +31,59 @@ info:
   title: Weather Forecast API
   version: "1.0"
 paths:
+  /api/subscribe:
+    post:
+      consumes:
+      - application/json
+      description: Subscribes an email to weather updates for a specific city with
+        the given frequency.
+      parameters:
+      - description: SubscribeReqBody
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/subscription.SubscribeReqBody'
+      - description: Email address to subscribe
+        in: body
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: City for weather updates
+        in: body
+        name: city
+        required: true
+        schema:
+          type: string
+      - description: Update frequency (daily or hourly)
+        in: body
+        name: frequency
+        required: true
+        schema:
+          type: string
+      produces:
+      - text/plain
+      responses:
+        "200":
+          description: Subscription successful. Confirmation email sent.
+          schema:
+            type: string
+        "400":
+          description: Invalid input
+          schema:
+            type: string
+        "409":
+          description: Subscription already exists
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Subscribe to weather updates
+      tags:
+      - subscription
   /api/subscription/confirm/{token}:
     get:
       description: Confirms a subscription using the token sent in the confirmation
